2001-01-27  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_content_byte_array): So
	set_content_array() was no good. After inspecting glib it was
	discovered that there are hidden data members of a GByteArray that
	hold info like if the data is NUL terminated, how much data is
	allocated, etc.

2001-01-26  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_set_content_array): new function.

2001-01-25  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_destroy): fix memory leak - the
	disposition wasn't being g_free()d.

2001-01-24  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_get_filename): Now takes a const
	GMimePart.

2001-01-22  Jeffrey Stedfast  <fejj@ximian.com>

	* pgp-mime.c (pgp_mime_part_is_rfc2015_signed): Uh yea...helps
	when ya spell things right :-)

2001-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (encoded_name): Updated.

	* gmime-part.c (g_mime_part_set_pre_encoded_content): Updated to
	reflect changes to gmime-utils.

	* gmime-utils.c (g_mime_utils_text_is_8bit): Take a len argument.
	(g_mime_utils_best_encoding): Same.
	(encode_8bit_word): Updated.

2001-01-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (g_mime_parser_construct_part): Check for NULL
	returns from g_strstrbound.

2001-01-11  Charles Kerr <charles@superpimp.org>

	* gmime-utils.c (get_year): small patch to handle 2-digit year
	representation a little better -- "71" now translates to 1971,
	but "01" now translates to 2001.  Thanks to Ihar Viarheichyk for
	suggesting this change.

2001-01-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* pgp-utils.c (pgp_decrypt): Take a cipherlen argument.

	* pgp-mime.c (pgp_mime_part_decrypt): Pass in a cipherlen to
	pgp_decrypt.

2001-01-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_content_md5): Don't allow the
	setting of Content-MD5 headers for multipart/* and message/rfc822
	types.
